# HalloChat-Qt

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  build-all.sh  build.ps1  qml.qrc  security-audit.md
qml/: App.qml  Login.qml
src/: AuthManager.cpp  AuthManager.h  CryptoService.cpp  CryptoService.h  DatabaseManager.cpp  DatabaseManager.h  MsgProtocol.cpp  MsgProtocol.h  PasswordService.cpp  PasswordService.h  ServerCore.cpp  ServerCore.h  main.cpp
src/domain/: DeviceProfile.cpp  DeviceProfile.h  Message.cpp  Message.h  User.cpp  User.h
src/protocol/: BinaryEncoder.h
tests/integration/: CMakeLists.txt  test_crypto_adapter.cpp
tests/unit/: AuthManagerTest.cpp
